@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2013, 2015 David Green and others.
+ * Copyright (c) 2013, 2026 David Green and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -14,22 +14,17 @@
 
 package org.eclipse.mylyn.internal.wikitext.ui.util;
 
-import java.io.BufferedInputStream;
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.Reader;
 
-import org.apache.commons.io.IOUtils;
 import org.eclipse.core.resources.IFile;
 import org.eclipse.core.runtime.CoreException;
 
+//FIXME: AF: remove this type
 public class IOUtil {
 	/**
 	 * Reads the content of the given file into a string.
 	 */
 	public static String readFully(IFile file) throws CoreException, IOException {
-		try (Reader r = new InputStreamReader(new BufferedInputStream(file.getContents()), file.getCharset())) {
-			return IOUtils.toString(r);
-		}
+		return new String(file.readAllBytes(), file.getCharset());
 	}
 }
